force-app/main/default/objects/Request__c/fields/Gap_Object__c.field-meta.xml
<CustomField>
    <fullName>Gap_Object__c</fullName>
    <label>Gap Area?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Current System Configuration</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>Interface</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>SFDC Configuration</fullName>
            </value>
            <value>
                <fullName>Workflows</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>