force-app/main/default/objects/Request__c/fields/Gap_Priority__c.field-meta.xml
<CustomField>
    <fullName>Gap_Priority__c</fullName>
    <label>Gap Priority?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Must Have</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>