force-app/main/default/objects/Request__c/fields/High_Level_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Priority__c</fullName>
    <inlineHelpText>Must have vs Nice to have is an initial attempt at determining priority for the overall project, not just phase 1.</inlineHelpText>
    <label>High Level Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Must Have</fullName>
            </value>
            <value>
                <fullName>Nice To Have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>