force-app/main/default/objects/Request__c/fields/Impacted_New_Components__c.field-meta.xml
<CustomField>
    <fullName>Impacted_New_Components__c</fullName>
    <description>List of components that is updated/created for completing the requirements</description>
    <label>List of Impacted/New Components</label>
    <type>TextArea</type>
</CustomField>