force-app/main/default/objects/Request__c/fields/Initial_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Assessment__c</fullName>
    <inlineHelpText>Outcome from Initial Assessment.</inlineHelpText>
    <label>Initial Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Workaround available</fullName>
            </value>
            <value>
                <fullName>Solution available</fullName>
            </value>
            <value>
                <fullName>No current solution or workaround available.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>