force-app/main/default/objects/Request__c/fields/Legacy_Capability__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Capability__c</fullName>
    <label>Legacy Capability</label>
    <length>30</length>
    <type>Text</type>
</CustomField>