force-app/main/default/objects/Request__c/fields/Level_of_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Complexity__c</fullName>
    <label>Level of Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>