force-app/main/default/objects/Request__c/fields/Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Effort__c</fullName>
    <description>Shows the category of level of effort required for the request based on total estimate for the request</description>
    <formula>IF(TotEst__c = 0.00, &quot;N/A&quot;, 
IF(TotEst__c &lt;= 8.00, &quot;Low&quot;, 
IF(TotEst__c &gt; 20.00, &quot;High&quot;, 
&quot;Medium&quot;)))</formula>
    <inlineHelpText>Low: Requires Less Than 8 Days of Work Effort 
Medium: Requires 8.01 - 20 Days of Work Effort 
High: Requires More Than 20.01 Days of Work Effort</inlineHelpText>
    <label>Level of Effort</label>
    <type>Text</type>
</CustomField>