force-app/main/default/objects/Request__c/fields/Level_of_Effort_Value__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Effort_Value__c</fullName>
    <description>Value is calculated by the Level of Effort formula field</description>
    <formula>if(Level_of_Effort__c = &quot;High&quot;,1, 
if(Level_of_Effort__c = &quot;Medium&quot;,2, 
If(Level_of_Effort__c = &quot;Low&quot;,3, 
0)))</formula>
    <inlineHelpText>Value is calculated by the Level of Effort formula field. 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
    <label>Level of Effort Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>