force-app/main/default/objects/Request__c/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <label>Sub Capability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Assignment &amp; Teams</fullName>
                <label>NS Account Teams</label>
            </value>
            <value>
                <fullName>Account Hierarchy</fullName>
            </value>
            <value>
                <fullName>Account Processes</fullName>
            </value>
            <value>
                <fullName>Account Reports &amp; Dashboards</fullName>
            </value>
            <value>
                <fullName>Account Search</fullName>
            </value>
            <value>
                <fullName>Account Types</fullName>
            </value>
            <value>
                <fullName>Account Visibility</fullName>
            </value>
            <value>
                <fullName>Activities Visibility &amp; Security</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Activity Creation</fullName>
            </value>
            <value>
                <fullName>Event Key Attributes</fullName>
                <label>Activity - Event Key Attributes</label>
            </value>
            <value>
                <fullName>Activity Reports &amp; Dashboards</fullName>
            </value>
            <value>
                <fullName>Task Key Attributes</fullName>
                <label>Activity - Task Key Attributes</label>
            </value>
            <value>
                <fullName>Activity Visibility</fullName>
            </value>
            <value>
                <fullName>Case Apex Automation &amp; Workflow Rules</fullName>
            </value>
            <value>
                <fullName>Case Close</fullName>
            </value>
            <value>
                <fullName>Case Core Functionalities</fullName>
            </value>
            <value>
                <fullName>Case Creation</fullName>
            </value>
            <value>
                <fullName>Case Email Collaboration</fullName>
            </value>
            <value>
                <fullName>Case Fields</fullName>
            </value>
            <value>
                <fullName>Case Home Page</fullName>
            </value>
            <value>
                <fullName>Case Mobile Push Notifications</fullName>
            </value>
            <value>
                <fullName>Case My Page</fullName>
            </value>
            <value>
                <fullName>Case Queues</fullName>
            </value>
            <value>
                <fullName>Case Record Types &amp; Page Layouts</fullName>
            </value>
            <value>
                <fullName>Case Search Results &amp; Related Lists/Buttons</fullName>
            </value>
            <value>
                <fullName>Case Validation Rules</fullName>
            </value>
            <value>
                <fullName>Configuring Aux Codes</fullName>
            </value>
            <value>
                <fullName>Configuring Wrap-up</fullName>
            </value>
            <value>
                <fullName>Contact Deactivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>