force-app/main/default/objects/Request__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Meeting</label>
    <length>90</length>
    <type>Text</type>
</CustomField>