force-app/main/default/objects/Request__c/fields/New_Existing__c.field-meta.xml
<CustomField>
    <fullName>New_Existing__c</fullName>
    <description>New for Phase 2 or Existing in Phase 1</description>
    <inlineHelpText>New for Phase 2 or Existing in Phase 1</inlineHelpText>
    <label>New or Existing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>