force-app/main/default/objects/Request__c/fields/Non_functional__c.field-meta.xml
<CustomField>
    <fullName>Non_functional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to denote non-functional requirements</description>
    <inlineHelpText>Used to denote non-functional requirements</inlineHelpText>
    <label>Non-functional?</label>
    <type>Checkbox</type>
</CustomField>