force-app/main/default/objects/Request__c/fields/OSS_Impacted__c.field-meta.xml
<CustomField>
    <fullName>OSS_Impacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Impact on OSS Phase 1 Build</description>
    <inlineHelpText>Does this requirement impact OSS Phase 1 Build? Used for Phase 2 Analysis</inlineHelpText>
    <label>OSS Impacted</label>
    <type>Checkbox</type>
</CustomField>