force-app/main/default/objects/Request__c/fields/Other_Gap_Area__c.field-meta.xml
<CustomField>
    <fullName>Other_Gap_Area__c</fullName>
    <label>Other Gap Area?</label>
    <type>TextArea</type>
</CustomField>