force-app/main/default/objects/Request__c/fields/Overall_Priority__c.field-meta.xml
<CustomField>
    <fullName>Overall_Priority__c</fullName>
    <description>Shows the priority of the request</description>
    <inlineHelpText>Value is calculated based on the value in the Total Priority Ranking field: 
High = Any value greater than or equal to 2.50 
Medium = Any value between 1.50 and 2.49 
Low = Any value less than 1.50</inlineHelpText>
    <label>Overall Priority</label>
    <length>6</length>
    <type>Text</type>
</CustomField>