force-app/main/default/objects/Request__c/fields/Parent_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Any related request to the request</description>
    <inlineHelpText>Track Parent / Child Requirement relationships. Also use to relate a Duplicate with the Open Request.</inlineHelpText>
    <label>Parent Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>CRM_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>