force-app/main/default/objects/Request__c/fields/Parent_Request_Title__c.field-meta.xml
<CustomField>
    <fullName>Parent_Request_Title__c</fullName>
    <formula>Parent_Request__r.Request_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Request Title</label>
    <type>Text</type>
</CustomField>