force-app/main/default/objects/Request__c/fields/Percentage_Trend__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Trend__c</fullName>
    <formula>&quot;test&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Trend</label>
    <type>Text</type>
</CustomField>