force-app/main/default/objects/Request__c/fields/Phase_Captured__c.field-meta.xml
<CustomField>
    <fullName>Phase_Captured__c</fullName>
    <label>Phase Captured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requirements</fullName>
                <label>Plan &amp; Analyze</label>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Post Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>