force-app/main/default/objects/Request__c/fields/Planned_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Completion_Date__c</fullName>
    <description>This is the date that the  requirement is due to be completed</description>
    <label>Planned Completion Date</label>
    <type>Date</type>
</CustomField>