force-app/main/default/objects/Request__c/fields/Planned_Release__c.field-meta.xml
<CustomField>
    <fullName>Planned_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates each request to a Release or Project.</description>
    <inlineHelpText>This is the suggested release in which the requirement should be deployed.</inlineHelpText>
    <label>Planned Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipName>CRM_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>