force-app/main/default/objects/Request__c/fields/Priority_Formula__c.field-meta.xml
<CustomField>
    <fullName>Priority_Formula__c</fullName>
    <formula>IF( AND(ISPICKVAL( Business_Value__c , &quot;1&quot;),ISPICKVAL( Complexity__c , &quot;2&quot;)) , &quot;1&quot;, IF( AND(ISPICKVAL( Business_Value__c , &quot;1&quot;),ISPICKVAL( Complexity__c , &quot;1&quot;)) , &quot;3&quot;, IF( AND(ISPICKVAL( Business_Value__c , &quot;2&quot;),ISPICKVAL( Complexity__c , &quot;2&quot;)) , &quot;2&quot;, IF( AND(ISPICKVAL( Business_Value__c , &quot;2&quot;),ISPICKVAL( Complexity__c , &quot;1&quot;)) , &quot;4&quot;, &quot;No Value&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Formula</label>
    <type>Text</type>
</CustomField>