force-app/main/default/objects/Request__c/fields/Process_Comments__c.field-meta.xml
<CustomField>
    <fullName>Process_Comments__c</fullName>
    <inlineHelpText>This is info that can assist with the process flow work.</inlineHelpText>
    <label>Process Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>