force-app/main/default/objects/Request__c/fields/Project_Mgmt_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Mgmt_Notes__c</fullName>
    <inlineHelpText>Notes where Project Mgmt can add their notes.</inlineHelpText>
    <label>Project Mgmt Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>