force-app/main/default/objects/Request__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Question to be raised with Functional team</description>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>