force-app/main/default/objects/Request__c/fields/Question_Status__c.field-meta.xml
<CustomField>
    <fullName>Question_Status__c</fullName>
    <description>Used for General Question record type</description>
    <label>Question Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Clarification Requested</fullName>
            </value>
            <value>
                <fullName>Clarification Provided</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>