force-app/main/default/objects/Request__c/fields/Quick_Hit__c.field-meta.xml
<CustomField>
    <fullName>Quick_Hit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks whether the request is quick hit or not</description>
    <inlineHelpText>A request can only be a quick hit if the IT level of effort is “low”, Business priority is “high”, the urgency of having the request is immediate, and the request can be implemented without impacting integration.</inlineHelpText>
    <label>Quick Hit</label>
    <type>Checkbox</type>
</CustomField>