force-app/main/default/objects/Request__c/fields/Regions_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Regions_Impacted__c</fullName>
    <description>Regions that get impacted due to this requirement.</description>
    <inlineHelpText>Regions that get impacted due to this requirement.</inlineHelpText>
    <label>Regions Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>