force-app/main/default/objects/Request__c/fields/Regions_Requesting__c.field-meta.xml
<CustomField>
    <fullName>Regions_Requesting__c</fullName>
    <description>Regions where the request needs to be build</description>
    <label>Regions Requesting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>