force-app/main/default/objects/Request__c/fields/Related_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Requests (Related Request)</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>