force-app/main/default/objects/Request__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Release in which the request will go</description>
    <inlineHelpText>The release in which the request will actually be deployed. If the requirement has not been approved for a release, there should not be a value in this field.</inlineHelpText>
    <label>Committed Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Requests (Committed Release)</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>