force-app/main/default/objects/Request__c/fields/Removed_From_Release__c.field-meta.xml
<CustomField>
    <fullName>Removed_From_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Release from which the request has been removed</description>
    <label>Removed From Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Requests (Removed From Release)</relationshipLabel>
    <relationshipName>Requirements1</relationshipName>
    <type>Lookup</type>
</CustomField>