force-app/main/default/objects/Request__c/fields/Removed_Release__c.field-meta.xml
<CustomField>
    <fullName>Removed_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify requests removed from a scheduled release.</description>
    <inlineHelpText>Indicate that a Request was removed from a Release only if it is removed after Design is complete.</inlineHelpText>
    <label>Removed from Release</label>
    <type>Checkbox</type>
</CustomField>