force-app/main/default/objects/Request__c/fields/Req__c.field-meta.xml
<CustomField>
    <fullName>Req__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days estimated for Requirement Gathering.</description>
    <inlineHelpText>Number of days estimated for Requirement Gathering.</inlineHelpText>
    <label>Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>