force-app/main/default/objects/Request__c/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <description>Gathers further details for requirements.</description>
    <inlineHelpText>Detailed Summary* 
Screen(s) Impacted* 
Field Name(s) &amp; Type(s)* 
Picklist Values 
Calculation 
Dependency 
Workflow/Approval Rules 
Interfacing System Updates 
Interface Frequency 
Data Volumes 
*Indicates information required for all requests!</inlineHelpText>
    <label>Initial Request</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>