force-app/main/default/objects/Request__c/fields/Request_Id_Innovation__c.field-meta.xml
<CustomField>
    <fullName>Request_Id_Innovation__c</fullName>
    <description>This field contains values (Request ID) of another org</description>
    <label>Request Id (Innovation)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>