force-app/main/default/objects/Request__c/fields/Request_Owner__c.field-meta.xml
<CustomField>
    <fullName>Request_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>