force-app/main/default/objects/Request__c/fields/Request_Title__c.field-meta.xml
<CustomField>
    <fullName>Request_Title__c</fullName>
    <description>Captures the requirement title</description>
    <inlineHelpText>Captures the requirement title</inlineHelpText>
    <label>Request Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>