force-app/main/default/objects/Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Type of the request</description>
    <inlineHelpText>If you are unsure of the type of request you are submitting, please select Unknown.</inlineHelpText>
    <label>Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Custom Code</fullName>
            </value>
            <value>
                <fullName>Data Access</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>User Administration</fullName>
            </value>
            <value>
                <fullName>User Story</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>