force-app/main/default/objects/Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name of the person originally submitting the request.</description>
    <inlineHelpText>Name of the person originally submitting the request.</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>CRM_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>