force-app/main/default/objects/Request__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <inlineHelpText>This is the improved request, this means we have now polished it.</inlineHelpText>
    <label>Requirement</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>