force-app/main/default/objects/Request__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evolved Requirement - Design</fullName>
            </value>
            <value>
                <fullName>Evolved Requirement -  Build</fullName>
            </value>
            <value>
                <fullName>Original Requirement</fullName>
            </value>
            <value>
                <fullName>Additional Requirement</fullName>
            </value>
            <value>
                <fullName>Requirements</fullName>
                <isActive>false</isActive>
                <label>Requirements</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>