force-app/main/default/objects/Request__c/fields/RICEFW_Complexity__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_Complexity__c</fullName>
    <formula>TEXT(RICEFW_Inventory_Name__r.Complexity__c)</formula>
    <label>RICEFW Complexity</label>
    <type>Text</type>
</CustomField>