force-app/main/default/objects/Request__c/fields/RICEFW_ID__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_ID__c</fullName>
    <formula>IF(RICEFW_Inventory_Name__c != null,RICEFW_Inventory_Name__r.RICEFW_ID__c, null)</formula>
    <inlineHelpText>Release + RICEFW Object + RICEFW #</inlineHelpText>
    <label>RICEFW ID</label>
    <type>Text</type>
</CustomField>