force-app/main/default/objects/Request__c/fields/RICEFW_Inventory_Name__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_Inventory_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose a RICEFW Inventory record to fill the gap. You may need to create a RICEFW Inventory record if the applicable one does not yet exist.</inlineHelpText>
    <label>RICEFW Inventory Name</label>
    <referenceTo>RICEFW_Inventory__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>