force-app/main/default/objects/Request__c/fields/RICEFW_New_Modified__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_New_Modified__c</fullName>
    <formula>TEXT(RICEFW_Inventory_Name__r.New_Modified__c)</formula>
    <label>RICEFW New / Modified</label>
    <type>Text</type>
</CustomField>