force-app/main/default/objects/Request__c/fields/RICEFW_Object__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_Object__c</fullName>
    <formula>RICEFW_Inventory_Name__r.RecordType.Name</formula>
    <label>RICEFW Object</label>
    <type>Text</type>
</CustomField>