force-app/main/default/objects/Request__c/fields/RICEFW_Priority__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_Priority__c</fullName>
    <formula>TEXT( RICEFW_Inventory_Name__r.Priority__c)</formula>
    <label>RICEFW Priority</label>
    <type>Text</type>
</CustomField>