force-app/main/default/objects/Request__c/fields/RICEFW_System_Impacted__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_System_Impacted__c</fullName>
    <formula>TEXT(RICEFW_Inventory_Name__r.System_Impacted__c)</formula>
    <label>RICEFW System Impacted</label>
    <type>Text</type>
</CustomField>