force-app/main/default/objects/Request__c/fields/RICEFW_Type__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_Type__c</fullName>
    <formula>TEXT(RICEFW_Inventory_Name__r.Type__c)</formula>
    <label>RICEFW Type</label>
    <type>Text</type>
</CustomField>