force-app/main/default/objects/Request__c/fields/SIT__c.field-meta.xml
<CustomField>
    <fullName>SIT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days estimated for completing SIT.</description>
    <inlineHelpText>Number of days estimated for completing SIT.</inlineHelpText>
    <label>Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>