force-app/main/default/objects/Request__c/fields/StartTime_Approve_to_Estimate__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Approve_to_Estimate__c</fullName>
    <label>StartTime Approve to Estimate</label>
    <type>DateTime</type>
</CustomField>