force-app/main/default/objects/Request__c/fields/StartTime_Approved_to_Deploy__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Approved_to_Deploy__c</fullName>
    <label>StartTime_Approved to Deploy</label>
    <type>DateTime</type>
</CustomField>