force-app/main/default/objects/Request__c/fields/StartTime_Build__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Build__c</fullName>
    <label>StartTime_Build</label>
    <type>DateTime</type>
</CustomField>