force-app/main/default/objects/Request__c/fields/StartTime_Build_Production__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Build_Production__c</fullName>
    <label>StartTime_Build Production</label>
    <type>DateTime</type>
</CustomField>