force-app/main/default/objects/Request__c/fields/StartTime_Deferred__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Deferred__c</fullName>
    <label>StartTime_Deferred</label>
    <type>DateTime</type>
</CustomField>