force-app/main/default/objects/Request__c/fields/StartTime_Deployed__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Deployed__c</fullName>
    <label>StartTime_Deployed</label>
    <type>DateTime</type>
</CustomField>