force-app/main/default/objects/Request__c/fields/StartTime_Design__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Design__c</fullName>
    <label>StartTime_Design</label>
    <type>DateTime</type>
</CustomField>