force-app/main/default/objects/Request__c/fields/StartTime_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Duplicate__c</fullName>
    <label>StartTime_Duplicate</label>
    <type>DateTime</type>
</CustomField>