force-app/main/default/objects/Request__c/fields/StartTime_Emergency_Request__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Emergency_Request__c</fullName>
    <label>StartTime_ Emergency Request</label>
    <type>DateTime</type>
</CustomField>