force-app/main/default/objects/Request__c/fields/StartTime_Identify_New_Requirement__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Identify_New_Requirement__c</fullName>
    <label>StartTime_Identify: New Requirement</label>
    <type>DateTime</type>
</CustomField>